force-app/main/default/objects/Availability__c/fields/Appointment_Holder__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Holder__c</fullName>
    <label>Appointment Holder</label>
    <referenceTo>Appointment_Holder__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>