force-app/main/default/objects/Availability__c/fields/Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Types__c</fullName>
    <label>Appointment Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Appointment_Types</valueSetName>
    </valueSet>
</CustomField>