force-app/main/default/objects/Availability__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The last day this availability applies to. Leave blank if it never expires.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>