force-app/main/default/objects/Availability__c/fields/Location_Zones__c.field-meta.xml
<CustomField>
    <fullName>Location_Zones__c</fullName>
    <label>Location Zones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Appointment_Location_Zones</valueSetName>
    </valueSet>
</CustomField>