force-app/main/default/objects/Availability__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The first day this availability applies to.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>