force-app/main/default/objects/Availability__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>Appointment_Holder__c</columns>
    <columns>Location_Zones__c</columns>
    <columns>Days_of_the_Week__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active</label>
</ListView>