force-app/main/default/objects/Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Appointment_Holder__c</columns>
    <columns>Location_Zones__c</columns>
    <columns>Days_of_the_Week__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>